# invest

./: .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  ROADMAP.md  SPEC.md  momentum_breakout_swing_trading_research_report.md  pyproject.toml
docs/adr/: 0001-full-stop-cs-alpha.md  0002-cfob-gate-law-divergence.md  0003-cfob-e1-e2-returns-gate.md  0003-cmp-opportunistic-baseline-path.md  0004-events22-f0-sealed-feasibility.md
docs/research/: cfob-e1-e2-results.md  cfob-e1-results.md  cfob-results.md  cmft-results.md  cmp-results.md  first-backtest-failure-research-plan-fable-5.md  first-backtest-failure-research-plan-kimi-k3.md  first-backtest-failure-research-plan.md  full-stop-seal.md  gate1a-results.md  i0-entitlement-and-next-edge.md  pead-f0-results.md  phase2-concentration-autopsy-plan.md  phase2-concentration-autopsy.md  phase2-results.md  sec8k-i0-results.md  sec8k-uf-i0-results.md  step3-spec-compliant-results.md  xs-reversal-results.md
docs/research/adversarial-debate/: shared-brief.md
fixtures/backtest/: bars.json  market-context.json  universe.json
fixtures/backtest-252/: bars.json  market-context.json  universe.json
fixtures/real-continuous/: market-context.json
fixtures/real-continuous/reports/: README.md  backtest-baseline.json  backtest-benchmark-control.json  backtest-core-speccompliant.json  backtest-uncapped-speccompliant.json  cfob-e1.json  (+29 more)
fixtures/v1/: bars.json  universe.json
openspec/: config.yaml
src/invest/: __init__.py
tests/: test_boundaries.py  test_container_scope.py
tests/adapters/: test_alpaca_broker.py  test_alpaca_market_data.py  test_backtest_context_json.py  test_bars_fixture_json.py  test_cli.py  test_cli_backtest.py  test_cli_execute.py  test_cli_fetch.py  test_events22_f0_cli.py  test_fixtures_json.py  test_generate_context_cli.py  test_journal_memory.py  test_paper_execute_smoke.py  test_sec8k_i0_cli.py  test_sec_edgar_8k.py  test_sec_insider_tape.py  test_sharadar_actions.py  test_sharadar_context_source.py  test_sharadar_events.py  test_sharadar_market_data.py  test_sharadar_tickers.py
tests/application/: test_admission.py  test_backtest_indexed_replay.py  test_backtest_run.py  test_cfob.py  test_cfob_returns.py  test_cfob_returns_loader.py  test_cmft.py  test_cmp_form4.py  test_event_study_excess.py  test_events22_f0.py  test_execute_run.py  test_generate_market_context.py  test_pead_f0.py  test_phase2_autopsy.py  test_phase2_report.py  test_ports.py  test_scan_run.py  test_sec8k_i0.py  test_xs_reversal.py
tests/contracts/: test_events.py
tests/domain/: test_backtest_metrics.py  test_exit_policy.py  test_indicators.py  test_liquidity_screen.py  test_market_context.py  test_market_context_builder.py  test_models.py  test_momentum_selection_scanner.py  test_rejection.py  test_scanner.py  test_sizing.py
tests/fixtures/: test_backtest_252_fixtures.py
(+284 files in other folders)
