[project]
name = "invest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.7,<3",
]

[project.scripts]
invest-scan = "invest.adapters.cli:main"
invest-fetch = "invest.adapters.cli:fetch_main"

[project.optional-dependencies]
dev = ["pytest>=8.2,<9", "ruff>=0.5,<1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = ["live: calls the real Alpaca market-data API"]

[tool.ruff]
target-version = "py312"
line-length = 100
