[project]
name = "invest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "exchange-calendars>=4.11,<5",
  "httpx>=0.28.1",
  "pydantic>=2.7,<3",
  "python-dotenv>=1.0,<2",
]

[project.scripts]
invest-scan = "invest.adapters.cli:main"
invest-fetch = "invest.adapters.cli:fetch_main"
invest-execute = "invest.adapters.cli:execute_main"
invest-backtest = "invest.adapters.cli:backtest_main"
invest-generate-context = "invest.adapters.generate_context_cli:main"
invest-sec8k-i0 = "invest.adapters.sec8k_i0_cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.2,<9", "ruff>=0.5,<1"]
# Research-only (CMFT Stage A driver T1/C2). Not required for production scan/backtest.
research-ml = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scikit-learn>=1.4,<2",
  "lightgbm>=4.3,<5",
  "pyarrow>=15,<23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/invest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "live: calls the real Alpaca market-data API",
  "paper_execute: submits a real paper order to Alpaca",
]

[tool.ruff]
target-version = "py312"
line-length = 100
